@@ -6,15 +6,17 @@ NEW FEATURES
 * Improved formatting of citation given to CrossRef for increased chances of finding matches with `GetDOIs`
 function (h/t Erich Studerus)
 * Additional parsing of 'month' field to accomodate days and ranges of days and months.  Example bib entries
-that will be parsed correctly include `month = jun # "/" # jul`, `month = "20~" # jan`, 
+that will be parsed correctly include `month = jun # "/" # jul`, `month = "20~" # jan`,
 `month = "20--25~" # dec`, `month =  "10~" # jan # "/" # feb` (request of Stephen Eglen)
-* Added argument 'group' to `ReadZotero` for specifying a groupID to query a group library instead of a 
+* Added argument 'group' to `ReadZotero` for specifying a groupID to query a group library instead of a
 user library (h/t Greg Blomquist).
 
 BUG FIXES
 
 * DOI's hyperlinks in Markdown format are now correct (h/t Stephen Eglen)
 * `print.BibEntry` with `BibOptions(style = "Biblatex")` fixed (h/t Artem Klevtsov)
+* `unlist.BibEntry` and `RelistBibEntry` now retains `@strings` and `mheader` and
+`mfooter` attributes (see ?BibEntry) if they are present
 
 Changes in Version 0.8.34 (2014-08-18)
 --------------------------------------------------------
